# NeuralSnake

./: CMakeLists.txt  README.md
src/: Matrix.h  NeuralNetwork.h  NeuralNetworkDeep.h  Population.h  PopulationDeep.h  Snake.h  main.cpp
